[gd_scene load_steps=11 format=2]

[ext_resource path="res://CrossRoom.gd" type="Script" id=1]
[ext_resource path="res://sprites/lift_controls.png" type="Texture" id=2]
[ext_resource path="res://alice-in-dark-wonderland-123894.mp3" type="AudioStream" id=2]
[gd_scene load_steps=10 format=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 74.875, 52.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 75.5, 53.75 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 74.5, 52.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 75.125, 56.125 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 12, 359.999 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 384.5, 53.5 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 47, 68.25 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 78, 190.5 )

[node name="CrossRoom" type="Node2D"]
script = ExtResource( 1 )

[node name="BottomRight" type="StaticBody2D" parent="."]
position = Vector2( 843, 584 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomRight"]
position = Vector2( 103.875, -40.5 )
shape = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="BottomRight"]
margin_left = 29.0
margin_top = -92.0
margin_right = 179.0
margin_bottom = 13.0
color = Color( 0, 0, 0, 1 )

[node name="TopLeft" type="StaticBody2D" parent="."]
position = Vector2( 36, 34 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopLeft"]
position = Vector2( 41.5, 21.25 )
shape = SubResource( 2 )

[node name="ColorRect2" type="ColorRect" parent="TopLeft"]
margin_left = -34.0
margin_top = -32.0
margin_right = 116.0
margin_bottom = 73.0
color = Color( 0, 0, 0, 1 )

[node name="TopRight" type="StaticBody2D" parent="."]
position = Vector2( 1000, 15 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopRight"]
position = Vector2( -53.5, 35.5 )
shape = SubResource( 3 )

[node name="ColorRect3" type="ColorRect" parent="TopRight"]
margin_left = -127.0
margin_top = -14.0
margin_right = 23.0
margin_bottom = 91.0
color = Color( 0, 0, 0, 1 )

[node name="BottomLeft" type="StaticBody2D" parent="."]
position = Vector2( 58, 586 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomLeft"]
position = Vector2( 19.875, -41.875 )
shape = SubResource( 4 )

[node name="ColorRect4" type="ColorRect" parent="BottomLeft"]
margin_left = -56.0
margin_top = -93.0
margin_right = 94.0
margin_bottom = 12.0
color = Color( 0, 0, 0, 1 )

[node name="TransitionLeft" type="Area2D" parent="."]
position = Vector2( -56, 292 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TransitionLeft"]
position = Vector2( 0, -1 )
shape = SubResource( 5 )

[node name="TransitionDown" type="Area2D" parent="."]
position = Vector2( 530, 647 )
rotation = 1.57013

[node name="CollisionShape2D" type="CollisionShape2D" parent="TransitionDown"]
position = Vector2( -2, 18.9928 )
shape = SubResource( 5 )

[node name="TransitionUp" type="Area2D" parent="."]
position = Vector2( 517, -39 )
rotation = 1.57013

[node name="CollisionShape2D" type="CollisionShape2D" parent="TransitionUp"]
position = Vector2( -2, 18.9964 )
shape = SubResource( 5 )

[node name="TransitionRight" type="Area2D" parent="."]
position = Vector2( 1083, 296 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TransitionRight"]
position = Vector2( 5, 2 )
shape = SubResource( 5 )

[node name="CenterSpawn" type="Position2D" parent="."]
position = Vector2( 486, 271 )

[node name="Lift" type="StaticBody2D" parent="."]
position = Vector2( 264, 430 )
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Lift"]
position = Vector2( 274, 115 )
shape = SubResource( 6 )

[node name="Sprite" type="Sprite" parent="Lift"]
position = Vector2( 271, -27 )
scale = Vector2( 2.34375, 2.875 )
texture = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="Lift"]
margin_left = -105.0
margin_top = 63.0
margin_right = 601.0
margin_bottom = 170.0
color = Color( 0, 0, 0, 1 )

[node name="Area2D" type="Area2D" parent="Lift"]
position = Vector2( 273, 19 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Lift/Area2D"]
position = Vector2( 2, -23.75 )
shape = SubResource( 8 )

[node name="Top" type="StaticBody2D" parent="."]
visible = false
position = Vector2( 255, 13 )
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Top"]
position = Vector2( 275.5, 41.5 )
shape = SubResource( 6 )

[node name="ColorRect" type="ColorRect" parent="Top"]
margin_left = -274.0
margin_top = -14.0
margin_right = 779.0
margin_bottom = 95.0
color = Color( 0, 0, 0, 1 )

[node name="Bottom" type="StaticBody2D" parent="."]
visible = false
position = Vector2( 264, 430 )
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bottom"]
position = Vector2( 274, 115 )
shape = SubResource( 6 )

[node name="ColorRect" type="ColorRect" parent="Bottom"]
margin_left = -300.0
margin_top = 63.0
margin_right = 791.0
margin_bottom = 170.0
color = Color( 0, 0, 0, 1 )

[node name="Left" type="StaticBody2D" parent="."]
visible = false
position = Vector2( -16, 197 )
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left"]
position = Vector2( 91, 100.5 )
shape = SubResource( 7 )

[node name="ColorRect" type="ColorRect" parent="Left"]
margin_left = -4.0
margin_top = -205.0
margin_right = 168.0
margin_bottom = 403.0
color = Color( 0, 0, 0, 1 )

[node name="Right" type="StaticBody2D" parent="."]
visible = false
position = Vector2( 750, 187 )
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right"]
position = Vector2( 199, 108 )
shape = SubResource( 7 )

[node name="ColorRect" type="ColorRect" parent="Right"]
margin_left = 122.0
margin_top = -203.0
margin_right = 283.0
margin_bottom = 420.0
color = Color( 0, 0, 0, 1 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )

[connection signal="body_entered" from="TransitionLeft" to="." method="_on_TransitionLeft_body_entered"]
[connection signal="body_entered" from="TransitionDown" to="." method="_on_TransitionDown_body_entered"]
[connection signal="body_entered" from="TransitionUp" to="." method="_on_TransitionUp_body_entered"]
[connection signal="body_entered" from="TransitionRight" to="." method="_on_TransitionRight_body_entered"]
[connection signal="body_entered" from="Lift/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Lift/Area2D" to="." method="_on_Area2D_body_exited"]
